# reminder-bot

./: .coveragerc  .dockerignore  .env.example  .gitignore  .markdownlintignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  admin_app.py  alembic.ini  docker-bake.hcl  docker-compose.local.yml  docker-compose.yml  entrypoint.sh  models.py  pyproject.toml  reminders.py  requirements.txt  run_reminder_bot.py  supervisord.conf  tests.yaml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: docker-publish.yml  release.yml  trigger-build.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
reminder_bot/: __main__.py  bot_service.py  config.py  db_bootstrap.py
reminder_bot/admin/: app.py
reminder_bot/admin/templates/: base.html  dashboard.html  login.html  users.html
reminder_bot/handlers/: callback_handlers.py  command_handlers.py
reminder_bot/models/: dtos.py  entities.py
reminder_bot/repositories/: base.py  reminder_repository.py  user_repository.py
reminder_bot/services/: notification_service.py  reminder_service.py  user_service.py
reminder_bot/utils/: database.py  error_recovery.py  exceptions.py  health.py  logging.py  scheduler.py  transformers.py  version.py
substrate/traces/operations/: 2026-04-06-admin-and-deps-fixes.md  2026-04-07-event-loop-startup-fix.md  2026-07-10-automatic-notification-recovery.md  2026-07-11-dependency-container-vulnerability-remediation.md
substrate/traces/research/: 2026-04-06-project-state.md  2026-04-17-app-data-postgres-removable.md
substrate/traces/reviews/: 2026-07-10-restart-notification-recovery-security.md  2026-07-10-trivy-dependency-image-vulnerabilities.md
substrate/traces/status/: 2026-04-06-preexisting-changes.md  (+2 more)
templates/: dashboard.html  login.html
tests/: conftest.py
tests/e2e/: test_system_integration.py
tests/integration/: test_database_integration.py
tests/unit/: test_bot_service.py  test_main.py
(+13 files in other folders)
